raffia/tests/error/scss/selectors/empty-placeholder.snap
---
source: raffia/tests/error.rs
---
error: simple selector is expected
  ┌─ empty-placeholder.scss:1:1
  │
1 │ % {
  │ ^


